# AI-Leanings

./: .gitignore  README.md
Key AI Learnings for Beginners/: README.md
Key AI Learnings for Beginners/First AI API calls - Labs/: README.md  main.py  pyproject.toml
Key AI Learnings for Beginners/First AI API calls - Labs/core/: settings.py
Key AI Learnings for Beginners/First AI API calls - Labs/labs/: task_1_import_setup.py  task_2_client_initialization.py  task_3_api_call_explained.py  task_4_extract_response.py  task_5_tokens_and_costs.py
Key AI Learnings for Beginners/First AI API calls - Labs/scripts/: verify_environment.py
Key AI Learnings for Beginners/Langchain - Labs/: README.md  main.py  pyproject.toml
Key AI Learnings for Beginners/Langchain - Labs/core/: settings.py
Key AI Learnings for Beginners/Langchain - Labs/labs/: task_1_openai_vs_langchain.py  task_2_multi_model.py  task_3_prompt_templates.py  task_4_output_parsers.py  task_5_complete_chain.py
